<resources>
    <string name="app_name">Global Logistics App</string>
    <string name="title_activity_services">ServicesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="services_customs">Customs Clearance</string>
    <string name="services_transport">Transport</string>
    <string name="services_discharge">Discharging</string>
    <string name="services_loading">Loading</string>
    <string name="services_manpower">Additional Manpower</string>
    <string name="services_warehousing">Warehousing</string>
    <string name="affirmative_answer">yes</string>
    <string name="Service_Screen_Name">Additional Services</string>
    <string name="invoice">Invoice</string>
    <string name="estimate">Estimate</string>
    <string name="back_button">Back</string>
    <string name="bill_of_lading">Bill of Lading</string>
    <string name="basic_port">Port / Airport</string>
    <string name="volume">Volume</string>
    <string name="voyage">Voyage number</string>
    <string name="address">Address</string>
    <string name="port_of">Port of discharge /\nArrival Airport</string>
    <string name="sailing_date">Sailing Date</string>
    <string name="delivery">Place of Delivery</string>
    <string name="shipper_address">Shipper\nAddress</string>
    <string name="container_number">Container number</string>
    <string name="vessel">Vessel</string>
    <string name="consignee_address">Consignee\nAddress</string>
    <string name="container_number_hint">ABCD 123456 7</string>
    <string name="description">Description</string>
    <string name="chargeable_weight">Chargeable Weight</string>
    <string name="vessel_name">Vessel Name</string>
    <string name="reception">Place of reception</string>
    <string name="weight">Weight</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="bill_of">Bill of lading number\n(MBL and HBL if required)\n/Air Waybill</string>
    <string name="packaging">Packaging</string>
    <string name="next_button">Next</string>
    <string name="notify_party_full">Notify Party\n(full address required)</string>
    <string name="notify_party_question">Is notify Party the same as consignee?</string>
    <string name="shipper_name">Shipper Name</string>
    <string name="name">Name</string>
    <string name="consignee_name">Consignee Name</string>
    <string name="shipper_account">Shipper\nAccount Number</string>
    <string name="account_number">Account Number</string>
    <string name="consignee_account">Consignee\nAccount Number</string>
    <string name="issued_carrier">Issued Carrier</string>
    <string name="carrier_agent_name">Carrier\nAgent Name</string>
    <string name="carrier_agent_address">Carrier\nAgent Address</string>
    <string name="carrier">Carrier</string>
    <string name="agent_iata_code">Agent Iata code</string>
    <string name="iata_code">Iata Code</string>
    <string name="text_view_quality">Nature or Quality\nof goods</string>
    <string name="edit_text_quality">Nature/ Quality</string>
    <string name="number_of_pieces">Number of pieces</string>
    <string name="dimensions">Dimensions (m)</string>
    <string name="dimensions_hint">0</string>
    <string name="units">Units</string>
    <string name="units_hint">CBM, kg</string>
    <string name="accounting_information">Accounting\nInformation</string>
    <string name="optional_field">(optional)</string>
    <string name="text_view_reference">Reference\nNumber</string>
    <string name="edit_text_reference">Reference Number</string>
    <string name="container_type">Container Type</string>
    <string name="date_of_departure">Date of Departure</string>
    <string name="date_of_arrival">Date of Arrival</string>
    <string name="truck_id">Truck ID</string>
    <string name="text_view_gross_weight">Gross weight\n(Truck+Load)</string>
    <string name="drivers_license">Driver\'s License ID</string>
    <string name="gross_weight_hint">Truck + Load</string>
    <string name="drivers_license_hint">000 000 000</string>
    <string name="shipping_type_header">Select type of shipping</string>
    <string name="maritime">Maritime</string>
    <string name="air">Air</string>
    <string name="road">Road</string>
    <string name="container_load">Container Load</string>
    <string name="shipping_manifest">Shipping Manifest</string>
    <string name="services_demurage">Demurrage</string>
    <string name="services_detention">Detention</string>
    <string name="fee_tariffs">Additional Tariffs</string>
    <string name="input_demurrage">Demurrage Amount</string>
    <string name="input_detention">Detention Amount</string>
    <string name="input_tariffs">Tariff Amount</string>
</resources>